# New-MRB-Mythology

./: .gitignore  Leaflet.Control.Custom.js  README.md  favicon.xcf  flake.nix  index.html  index.js  infos.js  lighttpd.conf  marker.blend  marker.blend1  node-packages.nix  package-lock.json  package.json  stories.js  style.css
Leaflet.MousePosition/: L.Control.MousePosition.css
Tiles/: tiles.json
backend/: .gitignore  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  module.nix
backend/src/: main.rs
fonts/: .gitignore
stories/text/: story_01.html  story_01.txt  story_02.html  story_02.txt  story_03.html  story_04.html  story_05.html  story_06.html
stories/text/story_03_data/: 00-New Orleans.csv  01-Baton Rouge.csv  02-Natchez.csv  03-Vicksburg.csv  04-Greenville.csv  05-Arkansas City.csv  06-Helena.csv  07-Memphis.csv  08-Osceola.csv  09-Caruthersville.csv  10-New Madrid.csv
