[package]
name = "mrb-mythology-backend"
version = "0.1.0"
authors = ["Kerstin Humm <kerstin@erictapen.name>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rusqlite = { version = "*", features = [ "chrono" ] }
chrono = "*"
serde_derive = "*"
serde = { version = "*", features = [ "derive" ] }
docopt = "*"
