[package]
name = "mrb-mythology-backend"
version = "0.1.0"
authors = ["Kerstin Humm <kerstin@erictapen.name>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
rusqlite = { version = "*", features = [ "chrono" ] }
serde_derive = "*"
serde = { version = "*", features = [ "derive" ] }
docopt = "*"
kdtree = { git = "https://github.com/mrhooray/kdtree-rs", branch = "master" }
log = "*"
data-url = "*"
image = "*"
sha2 = "*"
